src/test/ui/infinite/infinite-recursion-const-fn.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/infinite-recursion-const-fn.rs:4:5
   |
LL |     b()
   |     ^^^
   |     |
   |     reached the configured maximum number of stack frames
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
   |     inside `a` at $DIR/infinite-recursion-const-fn.rs:4:5
...
LL |     a()
   |     ---
   |     |
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
   |     inside `b` at $DIR/infinite-recursion-const-fn.rs:7:5
LL | }
LL | const ARR: [i32; a()] = [5; 6];
   |                  --- inside `ARR::{constant#0}` at $DIR/infinite-recursion-const-fn.rs:9:18

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
